# WM8974_NEW

./: CMakeLists.txt  README.md
FreeRTOSV821/: CMakeLists.txt
FreeRTOSV821/inc/: FreeRTOSConfig.h
FreeRTOSV821/src/: tasks.c
Source/: main.c  stm32f4xx_it.c
Source/Include/: config.h  config.h.in  main.h
Source/PeripheralsDriver/Include/: iic.h  nrf24l01.h
Source/PeripheralsDriver/Source/: iic.c  nrf24l01.c  wm8974.c
Source/STM32StdLib/: CMakeLists.txt
Source/STM32StdLib/Include/CMSIS/Device/: stm32f4xx.h
Source/Utils/Include/: circularbuffer.h
Source/Utils/Source/: circularbuffer.c  newlib.c
ldscript/: stm32f4_flash.ld
